# amethyst

./: README.org  amethyst.cabal  package.yaml
app/: Main.hs  Parser.hs  Types.hs
example/: amethyst.yaml
example/src/foo/: bar.amt
example/src/stuff/: answer.amt
example/src/stuff/answer/: prefix.amt
old/: amethyst.cabal  flake.nix
old/app/: Parser.hs
