cabal-version:      3.0
name:               amethyst
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    hs-source-dirs:   app
    default-language: Haskell2010

    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:

    build-depends:
      base,
      relude,
      flow,
      megaparsec,

    mixins:
      base hiding (Prelude),
      relude (Relude as Prelude),
      relude,
